<resources>
    <string name="app_name">Gym Mate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or_login_with">Or login with</string>
    <string name="google_account_login_button">Google account login button</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sing_up">Sing up</string>
    <string name="password">Password</string>
    <string name="repeat_the_password">Repeat the password</string>
    <string name="create_account">Create account</string>
    <string name="back">Back</string>
</resources>